--- a/style.css
+++ b/style.css
@@ -151,3 +151,27 @@ header .shopping span{
     width: 100%;
     height: auto;
 }
+
+@media only screen and (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+    .list {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        row-gap: 10px;
+    }
+    .list .item {
+        padding: 10px;
+        font-size: small;
+    }
+    .list .item .title {
+        font-size: x-small;
+    }
+    .list .item .price {
+        margin: 5px;
+        font-size: x-small;
+    }
+    .card {
+        max-width: 100%;
+    }
+}
